# zfile

./: Cargo.toml  readme.md
src/: file_info.rs  file_view.rs  main.rs  operations.rs  preferences.rs  search.rs  sidebar.rs
