[package]
name = "zfile"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9", package = "gtk4" }
gdk = { version = "0.9", package = "gdk4" }
gio = "0.20"
glib = "0.20"
chrono = "0.4"
byte-unit = "5.1"
trash = "5.1"
notify = "6.1"
tokio = { version = "1.41", features = ["full"] }
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
open = "5.0"
